List of things to ignore, wildcarded

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 */__pycache__
-section_09_databases_ORM_input_args/pyproject.toml
-section_09_databases_ORM_input_args/uv.lock
+*/pyproject.toml
+*/uv.lock
